jhipster-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jhipster-app
  labels:
    app: jhipster-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jhipster-app
  template:
    metadata:
      labels:
        app: jhipster-app
    spec:
      containers:
      - name: jhipster-app
        image: samar480/my-jhipster-app:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jhipster-app
spec:
  selector:
    app: jhipster-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:17.4
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
